[gd_scene load_steps=14 format=3 uid="uid://dlv36p4h2nq82"]

[ext_resource type="Theme" uid="uid://d1eqviolsoo" path="res://ui_theme.tres" id="1_r0du0"]
[ext_resource type="Script" uid="uid://c7j547mcsdx83" path="res://Main.gd" id="1_uu6xs"]
[ext_resource type="SpriteFrames" uid="uid://0etmro7bh8su" path="res://runner_frames.tres" id="2_uu6xs"]
[ext_resource type="Texture2D" uid="uid://d26assty20tor" path="res://sprites/testbg.png" id="3_cm0pq"]
[ext_resource type="Texture2D" uid="uid://c5s1p6id7d65c" path="res://sprites/logo.png" id="4_fos0i"]
[ext_resource type="Texture2D" uid="uid://cd2bg55wx2vh5" path="res://sprites/Frame.png" id="5_20pc6"]
[ext_resource type="Texture2D" uid="uid://dof7mlpk7ipk3" path="res://sprites/UItable.png" id="6_3dxm6"]
[ext_resource type="Texture2D" uid="uid://cdxjbhmjk8lki" path="res://progressbar2.png" id="7_03owx"]
[ext_resource type="AudioStream" uid="uid://ysi4whx45jrt" path="res://music/move.mp3" id="7_5vvyt"]
[ext_resource type="Texture2D" uid="uid://bp0nybh8c5v0b" path="res://progresbartop.png" id="7_trn2v"]
[ext_resource type="AudioStream" uid="uid://d041rw3cvo4kf" path="res://music/background.mp3" id="9_03owx"]
[ext_resource type="Texture2D" uid="uid://dg54hose04ch1" path="res://sprites/testbgn.png" id="10_wkp8b"]

[sub_resource type="Curve2D" id="Curve2D_uu6xs"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 93.6373, 159.519, 0, 0, 0, 0, 237.776, 197.626, 0, 0, 0, 0, 443.988, 213.578, 0, 0, 0, 0, 518.688, 250.799, 0, 0, 0, 0, 378.758, 287.133, 0, 0, 0, 0, 243.036, 281.816, 0, 0, 0, 0, 105.21, 288.02, 0, 0, 0, 0, 26.3026, 319.923, 0, 0, 0, 0, 77.8557, 363.348, 0, 0, 0, 0, 271.443, 381.958, 0, 0, 0, 0, 453.457, 381.958, 0, 0, 0, 0, 542.886, 419.179, 0, 0, 0, 0, 487.124, 467.921, 0, 0, 0, 0, 333.517, 466.149, 0, 0, 0, 0, 240.932, 468.807, 0, 0, 0, 0, 115.731, 480.328, 0, 0, 0, 0, 43.1363, 533.501, 0, 0, 0, 0, 131.513, 580.47, 0, 0, 0, 0, 288.277, 592.877)
}
point_count = 19

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_r0du0")
script = ExtResource("1_uu6xs")

[node name="DayBG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 970.0
texture = ExtResource("3_cm0pq")

[node name="NightBG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 970.0
texture = ExtResource("10_wkp8b")

[node name="Testbg" type="Sprite2D" parent="."]
position = Vector2(576, 485)
texture = ExtResource("5_20pc6")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(120, 150)
scale = Vector2(0.950476, 1.1284)
curve = SubResource("Curve2D_uu6xs")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(93.6373, 159.519)
rotation = 0.258464

[node name="Runner" type="AnimatedSprite2D" parent="Path2D/PathFollow2D"]
position = Vector2(1.79059, -34.3899)
rotation = -0.257502
scale = Vector2(0.197781, 0.197781)
sprite_frames = ExtResource("2_uu6xs")
animation = &"run"
speed_scale = 0.5

[node name="StepSound" type="AudioStreamPlayer2D" parent="Path2D/PathFollow2D/Runner"]
stream = ExtResource("7_5vvyt")
volume_db = -10.0

[node name="UItable" type="Sprite2D" parent="."]
position = Vector2(576, 485)
texture = ExtResource("6_3dxm6")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(916, 131)
rotation = 0.0488692
scale = Vector2(0.895, 0.895)
texture = ExtResource("4_fos0i")

[node name="RowCurrentWeight" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 721.0
offset_top = 252.0
offset_right = 1022.0
offset_bottom = 284.0

[node name="Current Weight" type="Label" parent="RowCurrentWeight"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
text = "Current Weight:"

[node name="current_weight_label" type="Label" parent="RowCurrentWeight"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
text = "-- kg"

[node name="RowGoalWeight" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 720.0
offset_top = 293.0
offset_right = 1026.0
offset_bottom = 325.0

[node name="Goal Weight" type="Label" parent="RowGoalWeight"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
text = "KG left to goal:"

[node name="goal_weight_label" type="Label" parent="RowGoalWeight"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
text = "80 kg"

[node name="RowTotalKM" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 720.0
offset_top = 333.0
offset_right = 937.0
offset_bottom = 365.0

[node name="Total KM" type="Label" parent="RowTotalKM"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
text = "Total KM:"

[node name="total_km_label" type="Label" parent="RowTotalKM"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
text = "-- km"

[node name="RowKMToday" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 720.0
offset_top = 375.0
offset_right = 945.0
offset_bottom = 407.0

[node name="KM Today" type="Label" parent="RowKMToday"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
text = "KM today:"

[node name="km_today_label" type="Label" parent="RowKMToday"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
text = "-- km"

[node name="RowStreak" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 720.0
offset_top = 413.0
offset_right = 924.0
offset_bottom = 445.0

[node name="Streak" type="Label" parent="RowStreak"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
text = "Streak:"

[node name="streak_label" type="Label" parent="RowStreak"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
text = "-- Day"

[node name="Progress Today" type="Label" parent="."]
layout_mode = 0
offset_left = 731.0
offset_top = 527.0
offset_right = 1046.0
offset_bottom = 569.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_font_sizes/font_size = 37
text = "Progress Today"

[node name="InputRow" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 736.0
offset_top = 608.0
offset_right = 1085.0
offset_bottom = 660.0
theme_override_constants/separation = 10

[node name="InputContainer" type="VBoxContainer" parent="InputRow"]
layout_mode = 2

[node name="weight_input" type="LineEdit" parent="InputRow/InputContainer"]
layout_mode = 2
theme_override_constants/minimum_character_width = 8
theme_override_font_sizes/font_size = 26
placeholder_text = "New weight"
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="km_input" type="LineEdit" parent="InputRow/InputContainer"]
layout_mode = 2
theme_override_constants/minimum_character_width = 7
theme_override_font_sizes/font_size = 26
placeholder_text = "KM today"
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false

[node name="log_btn" type="Button" parent="InputRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 61
text = "Log"

[node name="ProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_left = 716.0
offset_top = 762.0
offset_right = 1868.0
offset_bottom = 1732.0
step = 0.1
value = 6.1
texture_progress = ExtResource("7_03owx")

[node name="Progresbartop" type="Sprite2D" parent="."]
position = Vector2(576, 485)
texture = ExtResource("7_trn2v")

[node name="ProgressLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 803.0
offset_top = 781.0
offset_right = 843.0
offset_bottom = 851.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_font_sizes/font_size = 69

[node name="MusicPlayer" type="AudioStreamPlayer2D" parent="."]
position = Vector2(181, -139)
stream = ExtResource("9_03owx")
volume_db = -20.0
autoplay = true
parameters/looping = true

[node name="WeatherInfoLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 28.0
